add about section

--- a/index.html
+++ b/index.html
@@ -2,3 +2,42 @@
 layout: default
 path: "."
 ---
+
+<main class="main">
+    <section class="fragment fragment--about" id="o-nas">
+        <div class="fragment__item">
+            <div class="fragment__paragraph">
+                <h4 class="fragment__subtitle">O nas</h4>
+                <h2 class="fragment__title">DevBees stanowi zespół młodych, początkujących twórców.</h2>
+                <p class="fragment__content">Jesteśmy małym zespołem, mającym na celu tworzenie nieprzeciętnych gier niezależnych 2d, który również kieruje się dewizą, że drogo nie znaczy dobrze, gdyż korzystamy tylko z programów Open Source.</p>
+            </div>
+            <div class="fragment__featured-image">
+                <img src="{{ page.path }}/assets/images/featured_image_1.png" alt>
+            </div>
+        </div>
+
+        <div class="fragment__item">
+            <div class="fragment__featured-image">
+                <img src="{{ page.path }}/assets/images/featured_image_2.png" alt>
+            </div>
+            <div class="fragment__paragraph">
+                <h4 class="fragment__subtitle">Koszty</h4>
+                <h2 class="fragment__title">Nie wymagamy żadnych płatnych programów.</h2>
+                <p class="fragment__content">W naszej skromnej firmie postawiliśmy sobie warunek - aby to co robimy było za darmo, bez żadnych ukrytych kosztów. Dlatego cały czas poszukujemy programów na licencji open source (darmowych), bądź takich, w których opłaty za wyższe wersje programu nie będą przeszkadzały w pracowaniu z daną aplikacją.</p>
+            </div>
+        </div>
+
+        <div class="fragment__item">
+            <div class="fragment__paragraph">
+                <h4 class="fragment__subtitle">Rekrutacja</h4>
+                <h2 class="fragment__title">Możesz dołączyć do nas kiedy chcesz!</h2>
+                <p class="fragment__content">Pamiętaj, że prawdopodobnie większość z nas tutaj zgromadzonych nie umie nic, więc żadna umiejętność nie jest również wymagana. Pamiętaj chcemy się uczyć, a nie zarabiać pieniądze. Dlatego też, jeżeli przychodzisz tutaj z 0 % doświadczeniem, to nie ma znaczenia. Z biegiem czasu nauczymy się wszystkiego.</p>
+            </div>
+            <div class="fragment__featured-image">
+                <img src="{{ page.path }}/assets/images/featured_image_3.png" alt>
+            </div>
+        </div>
+
+        <p class="fragment__button"><a href="#dolacz-juz-dzis">Dołącz już dziś!</a></p>
+    </section>
+</main>
