add filter to images

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ path: "."
 ---
 
 <main class="main">
-    <section class="fragment fragment--about" id="o-nas">
+    <section class="fragment" id="o-nas">
         <div class="fragment__item">
             <div class="fragment__paragraph">
                 <h4 class="fragment__subtitle">O nas</h4>
