add new section

--- a/index.html
+++ b/index.html
@@ -40,4 +40,14 @@ path: "."
 
         <p class="fragment__button"><a href="#dolacz-juz-dzis">Dołącz już dziś!</a></p>
     </section>
+
+    <section class="fragment fragment--bg-red fragment--tight" id="nasze-pomysly">
+        <h2 class="fragment__title fragment__title--dark">Dark Day</h2>
+        <div class="fragment__content fragment__content--white">
+            <p>Gra to przygodowy horror, opowiadająca o Benie, który musi się zmierzyć z inwazją obcych, którzy blokują dostęp do słońca, przez co całe życie w małym miasteczku zamiera. Będzie tworzona w 2d, z widokiem z boku postaci. Postawimy w niej na stworzenie mrocznego i niepokojącego klimatu, pozwalającemu graczowi wniknąć w świat i zatracić się w nim. Będzie postawiony przed wieloma wyborami, co doprowadzi nas do jednego z kilku zakończeń. Czy mu się uda?</p>
+            <p>
+                <img src="{{ page.path }}/assets/images/illustration.png" alt="Ilustracja">
+            </p>
+        </div>
+    </section>
 </main>
