add sectors section

--- a/index.html
+++ b/index.html
@@ -41,13 +41,40 @@ path: "."
         <p class="fragment__button"><a href="#dolacz-juz-dzis">Dołącz już dziś!</a></p>
     </section>
 
-    <section class="fragment fragment--bg-red fragment--tight" id="nasze-pomysly">
+    <section class="fragment fragment--bg-red" id="nasze-pomysly">
         <h2 class="fragment__title fragment__title--dark">Dark Day</h2>
         <div class="fragment__content fragment__content--white">
             <p>Gra to przygodowy horror, opowiadająca o Benie, który musi się zmierzyć z inwazją obcych, którzy blokują dostęp do słońca, przez co całe życie w małym miasteczku zamiera. Będzie tworzona w 2d, z widokiem z boku postaci. Postawimy w niej na stworzenie mrocznego i niepokojącego klimatu, pozwalającemu graczowi wniknąć w świat i zatracić się w nim. Będzie postawiony przed wieloma wyborami, co doprowadzi nas do jednego z kilku zakończeń. Czy mu się uda?</p>
             <p>
                 <img src="{{ page.path }}/assets/images/illustration.png" alt="Ilustracja">
             </p>
+        </div>
+    </section>
+
+    <section class="fragment fragment--tight" id="sektory-dzialania">
+        <h2 class="fragment__title fragment__title--red">Sektory działania</h2>
+        <div class="fragment__content fragment__content--sections">
+            <div class="fragment__item-left">
+                <div class="fragment__item-image">
+                    <img src="{{ page.path }}/assets/images/sector_1.png" alt="Logika">
+                </div>
+                <h3 class="fragment__title">Logika</h3>
+                <p>Sektor odpowiedzialny za mechanikę w grze (poruszanie się, fizyka, balistyka itp.). Przyda się tutaj znajomość języków programowania, jednak nawet brak znajomości ich nie będzie problemem.</p>
+            </div>
+            <div class="fragment__item-center">
+                <div class="fragment__item-image">
+                    <img src="{{ page.path }}/assets/images/sector_2.png" alt="Fabuła i planowanie">
+                </div>
+                <h3 class="fragment__title">Fabuła i planowanie</h3>
+                <p>Sektor odpowiedzialny tak naprawdę za wszystko inne, od planowania całej gry po pojedyncze poziomy. W tym sektorze podejmowane będą decyzje co do najważniejszych rzeczy związanych z grą, a więc efektem końcowym. Będzie to także sektor odpowiedzialny za marketing gry.</p>
+            </div>
+            <div class="fragment__item-right">
+                <div class="fragment__item-image">
+                    <img src="{{ page.path }}/assets/images/sector_3.png" alt="Audio - Visual">
+                </div>
+                <h3 class="fragment__title">Audio - Visual</h3>
+                <p>Sektor odpowiedzialny za wszystko co widać i słychać na scenie. Przydadzą się tutaj kreatywne umysły zaznajomione z programami do obróbki dźwięku oraz grafiki. Nawet jeżeli nie umiesz jeszcze rysować, to nie problem. U nas najważniejsze to nauka.</p>
+            </div>
         </div>
     </section>
 </main>
