add contact form

--- a/index.html
+++ b/index.html
@@ -77,4 +77,21 @@ path: "."
             </div>
         </div>
     </section>
+
+    <section class="fragment fragment--tight" id="dolacz-juz-dzis">
+        <h2 class="fragment__title fragment__title--contact">Zgłoś się już dziś!</h2>
+        <div class="fragment__content fragment__content--form">
+            <form action="" method="post">
+                <input type="text" name="name" placeholder="Imię" class="form-input">
+                <input type="email" name="email" placeholder="Email" class="form-input">
+                <input type="text" name="sector" placeholder="Do którego działu chciałbyś należeć?" class="form-input">
+                <div class="form-textarea-row">
+                    <textarea name="content" placeholder="W czym chciałbyś pomóc? Jakie są twoje umiejętności?" class="form-textarea"></textarea>
+                </div>
+                <div class="form-button-row">
+                    <button class="form-button" type="submit">Wyślij</button>
+                </div>
+            </form>
+        </div>
+    </section>
 </main>
