--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ path: "."
             </div>
         </div>
 
-        <div class="fragment__item">
+        <div class="fragment__item fragment--odd">
             <div class="fragment__featured-image">
                 <img src="{{ page.path }}/assets/images/featured_image_2.png" alt>
             </div>
