update section responsiveness

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ path: "."
         </div>
     </section>
 
-    <section class="fragment fragment--tight" id="sektory-dzialania">
+    <section class="fragment fragment--medium" id="sektory-dzialania">
         <h2 class="fragment__title fragment__title--red">Sektory działania</h2>
         <div class="fragment__content fragment__content--sections">
             <div class="fragment__item-left">
