--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ path: "."
             <div class="fragment__paragraph">
                 <h4 class="fragment__subtitle">O nas</h4>
                 <h2 class="fragment__title">DevBees stanowi zespół młodych, początkujących twórców.</h2>
-                <p class="fragment__content">Jesteśmy małym zespołem, mającym na celu tworzenie nieprzeciętnych gier niezależnych 2d, który również kieruje się dewizą, że drogo nie znaczy dobrze, gdyż korzystamy tylko z programów Open Source.</p>
+                <p class="fragment__content">Jesteśmy małym zespołem, mającym na celu tworzenie nieprzeciętnych gier oraz programów, który również kieruje się dewizą, że drogo nie znaczy dobrze, gdyż korzystamy tylko z programów Open Source lub takich, które nie wymagają ich zakupu.</p>
             </div>
             <div class="fragment__featured-image">
                 <img src="{{ page.path }}/assets/images/featured_image_1.png" alt>
@@ -59,14 +59,14 @@ path: "."
                     <img src="{{ page.path }}/assets/images/sector_1.png" alt="Logika">
                 </div>
                 <h3 class="fragment__title">Logika</h3>
-                <p>Sektor odpowiedzialny za mechanikę w grze (poruszanie się, fizyka, balistyka itp.). Przyda się tutaj znajomość języków programowania, jednak nawet brak znajomości ich nie będzie problemem.</p>
+                <p>Sektor odpowiedzialny za działanie gry lub programu. Przyda się tutaj znajomość języków programowania, jednak nawet brak znajomości ich nie będzie problemem.</p>
             </div>
             <div class="fragment__item-center">
                 <div class="fragment__item-image">
                     <img src="{{ page.path }}/assets/images/sector_2.png" alt="Fabuła i planowanie">
                 </div>
                 <h3 class="fragment__title">Fabuła i planowanie</h3>
-                <p>Sektor odpowiedzialny tak naprawdę za wszystko inne, od planowania całej gry po pojedyncze poziomy. W tym sektorze podejmowane będą decyzje co do najważniejszych rzeczy związanych z grą, a więc efektem końcowym. Będzie to także sektor odpowiedzialny za marketing gry.</p>
+                <p>Sektor odpowiedzialny tak naprawdę za wszystko inne, od planowania całej pracy po pojedyncze rzeczy. W tym sektorze podejmowane będą decyzje co do najważniejszych rzeczy związanych z programem lub grą, a więc efektem końcowym. Będzie to także sektor odpowiedzialny za marketing.</p>
             </div>
             <div class="fragment__item-right">
                 <div class="fragment__item-image">
