--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ path: "."
             <div class="fragment__paragraph">
                 <h4 class="fragment__subtitle">Rekrutacja</h4>
                 <h2 class="fragment__title">Możesz dołączyć do nas kiedy chcesz!</h2>
-                <p class="fragment__content">Pamiętaj, że prawdopodobnie większość z nas tutaj zgromadzonych nie umie nic, więc żadna umiejętność nie jest również wymagana. Pamiętaj chcemy się uczyć, a nie zarabiać pieniądze. Dlatego też, jeżeli przychodzisz tutaj z 0 % doświadczeniem, to nie ma znaczenia. Z biegiem czasu nauczymy się wszystkiego.</p>
+                <p class="fragment__content">Pamiętaj, że prawdopodobnie większość z nas tutaj zgromadzonych nie ma zbyt dużego doświadczenia, więc i takie nie jest również wymagane. Pamiętaj chcemy się uczyć, a nie zarabiać pieniądze. Dlatego też, jeżeli przychodzisz tutaj z małym doświadczeniem, to nie ma znaczenia. Z biegiem czasu nauczymy się wszystkiego.</p>
             </div>
             <div class="fragment__featured-image">
                 <img src="{{ page.path }}/assets/images/featured_image_3.png" alt>
@@ -59,7 +59,7 @@ path: "."
                     <img src="{{ page.path }}/assets/images/sector_1.png" alt="Logika">
                 </div>
                 <h3 class="fragment__title">Logika</h3>
-                <p>Sektor odpowiedzialny za działanie gry lub programu. Przyda się tutaj znajomość języków programowania, jednak nawet brak znajomości ich nie będzie problemem.</p>
+                <p>Sektor odpowiedzialny za działanie gry lub programu. Przyda się tutaj znajomość języków programowania.</p>
             </div>
             <div class="fragment__item-center">
                 <div class="fragment__item-image">
@@ -73,7 +73,7 @@ path: "."
                     <img src="{{ page.path }}/assets/images/sector_3.png" alt="Audio - Visual">
                 </div>
                 <h3 class="fragment__title">Audio - Visual</h3>
-                <p>Sektor odpowiedzialny za wszystko co widać i słychać na scenie. Przydadzą się tutaj kreatywne umysły zaznajomione z programami do obróbki dźwięku oraz grafiki. Nawet jeżeli nie umiesz jeszcze rysować, to nie problem. U nas najważniejsze to nauka.</p>
+                <p>Sektor odpowiedzialny za wszystko co widać i słychać na scenie. Przydadzą się tutaj kreatywne umysły zaznajomione z programami do obróbki dźwięku oraz grafiki.Nie zależnie od umiejętności napewno się przydasz.</p>
             </div>
         </div>
     </section>
