--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ path: "."
                     <img src="{{ page.path }}/assets/images/sector_1.png" alt="Logika">
                 </div>
                 <h3 class="fragment__title">Logika</h3>
-                <p>Sektor odpowiedzialny za działanie gry lub programu. Przyda się tutaj znajomość języków programowania.</p>
+                <p>Sektor odpowiedzialny za działanie gry lub programu. Przyda się tutaj podstawowa znajomość języków programowania oraz znajomość algorytmów.</p>
             </div>
             <div class="fragment__item-center">
                 <div class="fragment__item-image">
