update sections again

--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@ path: "."
                     <img src="{{ page.path }}/assets/images/sector_1.png" alt="Logika">
                 </div>
                 <h3 class="fragment__title">Logika</h3>
-                <p>Sektor odpowiedzialny za działanie gry lub programu. Przyda się tutaj znajomość języków programowania.</p>
+                <p>Sektor odpowiedzialny za działanie gry lub programu. Przyda się tutaj znajomość języków programowania. Nie zależnie od umiejętności napewno się przydasz.</p>
             </div>
             <div class="fragment__item-center">
                 <div class="fragment__item-image">
                     <img src="{{ page.path }}/assets/images/sector_2.png" alt="Fabuła i planowanie">
                 </div>
-                <h3 class="fragment__title">Fabuła i planowanie</h3>
-                <p>Sektor odpowiedzialny tak naprawdę za wszystko inne, od planowania całej pracy po pojedyncze rzeczy. W tym sektorze podejmowane będą decyzje co do najważniejszych rzeczy związanych z programem lub grą, a więc efektem końcowym. Będzie to także sektor odpowiedzialny za marketing.</p>
+                <h3 class="fragment__title">Planowanie</h3>
+                <p>W tym sektorze podejmowane będą decyzje co do najważniejszych rzeczy związanych z programem lub grą, a więc efektem końcowym. Będzie to także sektor odpowiedzialny za marketing.</p>
             </div>
             <div class="fragment__item-right">
                 <div class="fragment__item-image">
                     <img src="{{ page.path }}/assets/images/sector_3.png" alt="Audio - Visual">
                 </div>
                 <h3 class="fragment__title">Audio - Visual</h3>
-                <p>Sektor odpowiedzialny za wszystko co widać i słychać na scenie. Przydadzą się tutaj kreatywne umysły zaznajomione z programami do obróbki dźwięku oraz grafiki.Nie zależnie od umiejętności napewno się przydasz.</p>
+                <p>Sektor odpowiedzialny za wszystko co widać i słychać na scenie. Przydadzą się tutaj kreatywne umysły zaznajomione z programami do obróbki dźwięku oraz grafiki.</p>
             </div>
         </div>
     </section>
